code footer and most of elements block waiting on help with bottom of card

--- a/index.html
+++ b/index.html
@@ -92,18 +92,12 @@
           <img src="images/heart.png" alt="heart" class="element__heart">
         </div>
       </div>
-
     </section>
-
-       
-
-    
-
 
    </main>
 
   </body>
-  <footer>
-    <p class="footer__copyright">&copy;2020. Megan Younger</p>
+  <footer class ="footer">
+    <img src="images/copyright.png" alt="2020 around the world" class="footer__copyright">
   </footer>
 </html>       
