code javascript and modal

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <button class="modal__form-submit">Save</button>
         </form>
       </div>   
+      <img src="images/modal-close-icon.png" class="modal__close-icon">
       
       <div class="overlay">
       </div>
