struggling with javascript

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="profile__info">
           <div class="profile__info-top">
-            <h2 class="profile__title">Jacques Cousteau</h2>
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button class="profile__edit-button" type="button"><img src="images/edit-button-vector.png" class="profile__edit-button-vector"></button>
           </div>
-          <h3 class="profile__explorer">Explorer</h3>
+          <h3 class="profile__occupation">Explorer</h3>
         </div>
         <button class="profile__add-button" type="button"><img src="images/add-button-plus.png" class="profile__add-button-plus"></button>  
       </section>
@@ -104,9 +104,11 @@
           </button>
           <form class="modal__form" action="#" method="POST">
             <h2 class="modal__title">Edit profile</h2>
-            <input type="text" id="name" name="name" class="modal__form-control" required placeholder="Jacques Cousteau">         
-            <input type="text" id="occupation" name="occupation" class="modal__form-control" required placeholder="Explorer">         
-            <button aria-label="Submit Form" type="submit" class="modal__form-submit">Save</button>
+            <input type="text" id="name" name="name" class="modal__form-control modal__form-name" required placeholder="Jacques Cousteau">         
+            <input type="text" id="occupation" name="occupation" class="modal__form-control modal__form-occupation" required placeholder="Explorer">    
+            <!--<input type="button" value="Submit" onclick="modal__form-control">-->
+             
+           <button aria-label="Submit Form" type="submit" class="modal__form-submit">Save</button>  
           </form>
         </div>
       </div>  
