debug after coder review

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile__info">
           <div class="profile__info-top">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button button" type="button"><img src="images/edit-button.png" class="profile__edit-button-image" alt="edit button vector"></button>
+            <button class="profile__edit-button button modal__open" type="button"><img src="images/edit-button.png" class="profile__edit-button-image" alt="edit button vector"></button>
           </div>
           <h2 class="profile__occupation">Explorer</h2>
         </div>
@@ -98,8 +98,8 @@
       <div class="modal"> 
         <div class="modal__container">   
           <form class="modal__form" action="#" method="POST">
-            <button aria-label="Close Form" type="button" class="modal__close-button link">
-              <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
+            <button aria-label="Close Form" type="button" class="modal__close-button">
+              <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon link">
             </button>
             <h2 class="modal__title">Edit profile</h2>
             <input type="text" id="name" name="name" class="modal__form-control modal__form-name" required placeholder="Jacques Cousteau">         
