--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile__info">
           <div class="profile__info-top">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button button modal__open" type="button"><img src="images/edit-button.png" class="profile__edit-button-image" alt="edit button vector"></button>
+            <button class="profile__edit-button button" type="button"><img src="images/edit-button.png" class="profile__edit-button-image" alt="edit button vector"></button>
           </div>
           <h2 class="profile__occupation">Explorer</h2>
         </div>
