debug modal and code javascript

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon link">
             </button>
             <h2 class="modal__title">Edit profile</h2>
-            <input type="text" id="name" name="name" class="modal__form-control modal__form-name" required placeholder="Jacques Cousteau">         
-            <input type="text" id="occupation" name="occupation" class="modal__form-control modal__form-occupation" required placeholder="Explorer">                 
+            <input type="text" id="name" name="name" class="modal__form-control modal__form-name">         
+            <input type="text" id="occupation" name="occupation" class="modal__form-control modal__form-occupation">                 
            <button aria-label="Submit Form" type="submit" class="modal__form-submit button">Save</button>  
           </form>
         </div>
