ready for code review

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">Edit profile</h3>
-          <input type="text" name="name" class="modal__form_input modal__form_input_name" placeholder="Name">         
-          <input type="text" name="occupation" class="modal__form_input modal__form_input_occupation" placeholder="About me">                 
-          <button aria-label="Submit Form" type="submit" class="modal__form_submit button">Save</button>  
+          <input type="text" name="name" class="modal_input modal_input_name" placeholder="Name">         
+          <input type="text" name="occupation" class="modal_input modal_input_occupation" placeholder="About me">                 
+          <button aria-label="Submit Form" type="submit" class="modal_submit button">Save</button>  
         </form>
       </div>
     </div>   
