--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         </div>
         <button class="profile__add-button button" type="button"><img src="images/add-button-plus.png" class="profile__add-button-plus" alt="add button"></button>  
       </section>
-      <section class="elements">
-        <div class="element">
+
+      <section class="places">
+        <ul class="places__list"></ul>
+        <!--<div class="element">
           <img src="images/yosemite.png" alt="yosemite valley" class="element__image">                   
             <div class="element__content">
               <h2 class="element__title">Yosemite Valley</h2>
@@ -64,7 +66,7 @@
               <h2 class="element__title"> Lago di Braies</h2>
               <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
             </div>          
-        </div>
+        </div>-->
       </section>
     </main>    
     <footer class="footer"><p class="footer__copyright">&copy;2020. Around the US</p></footer>
@@ -82,6 +84,18 @@
       </div>
     </div>   
     <script src="./scripts/index.js"></script>  
+
+    <template id="card-template">
+      <li class="places__item card">
+        <div class="card__image" style=""></div>
+        <!--<img src="images/yosemite.png" alt="yosemite valley" class="place__image"> -->                  
+          <div class="card__content">
+            <h2 class="card__title"></h2>
+            <button class="card__like-button button" type="button" style="background-image: url('./images/heart.png');"></button> 
+          </div>         
+      </li>
+    </template>
+
   </body> 
 
 </html>
