code template and respective javascript for cards

--- a/index.html
+++ b/index.html
@@ -25,46 +25,46 @@
 
       <section class="places">
         <ul class="places__list"></ul>
-        <!--<div class="element">
-          <img src="images/yosemite.png" alt="yosemite valley" class="element__image">                   
-            <div class="element__content">
-              <h2 class="element__title">Yosemite Valley</h2>
-              <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
+        <!--<div class="places__item card">
+          <img src="images/yosemite.png" alt="yosemite valley" class="card__image">                   
+            <div class="card__content">
+              <h2 class="card__title">Yosemite Valley</h2>
+              <button class="card__like button" type="button"><img src="images/heart.png" class="card__like-heart" alt="heart"></button> 
             </div>         
         </div>
-        <div class="element">
-          <img src="images/louise.png" alt="lake louise" class="element__image">         
-            <div class="element__content">
-              <h2 class="element__title">Lake Louise</h2>
-              <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
+        <div class="places__item card">
+          <img src="images/louise.png" alt="lake louise" class="card__image">         
+            <div class="card__content">
+              <h2 class="card__title">Lake Louise</h2>
+              <button class="card__like button" type="button"><img src="images/heart.png" class="card__like-heart" alt="heart"></button> 
             </div>        
         </div>
-        <div class="element">
-          <img src="images/bald.png" alt="bald mountain" class="element__image">       
-            <div class="element__content">
-              <h2 class="element__title">Bald Mountain</h2>
-              <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
+        <div class="places__item card">
+          <img src="images/bald.png" alt="bald mountain" class="card__image">       
+            <div class="card__content">
+              <h2 class="card__title">Bald Mountain</h2>
+              <button class="card__like button" type="button"><img src="images/heart.png" class="card__like-heart" alt="heart"></button> 
             </div>        
         </div>
-        <div class="element">
-          <img src="images/latemar.png" alt="latemar" class="element__image">      
-            <div class="element__content">
-              <h2 class="element__title">Latemar</h2>
-              <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
+        <div class="places__item card">
+          <img src="images/latemar.png" alt="latemar" class="card__image">      
+            <div class="card__content">
+              <h2 class="card__title">Latemar</h2>
+              <button class="card__like button" type="button"><img src="images/heart.png" class="card__like-heart" alt="heart"></button> 
             </div>          
         </div>
-        <div class="element">
-          <img src="images/vanoise.png" alt="vanoise national park" class="element__image">        
-            <div class="element__content">
-              <h2 class="element__title">Vanoise National Park</h2>
-              <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
+        <div class="places__item card">
+          <img src="images/vanoise.png" alt="vanoise national park" class="card__image">        
+            <div class="card__content">
+              <h2 class="card__title">Vanoise National Park</h2>
+              <button class="card__like button" type="button"><img src="images/heart.png" class="card__like-heart" alt="heart"></button> 
             </div>          
         </div>
-        <div class="element">
-          <img src="images/lago.png" alt="lago di briaes" class="element__image">
-            <div class="element__content">
-              <h2 class="element__title"> Lago di Braies</h2>
-              <button class="element__like button" type="button"><img src="images/heart.png" class="element__like-heart" alt="heart"></button> 
+        <div class="places__item card">
+          <img src="images/lago.png" alt="lago di briaes" class="card__image">
+            <div class="card__content">
+              <h2 class="card__title"> Lago di Braies</h2>
+              <button class="card__like button" type="button"><img src="images/heart.png" class="card__like-heart" alt="heart"></button> 
             </div>          
         </div>-->
       </section>
