--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </section>
 
       <section class="places">
-        <ul class="places__list"></ul>
-        <!--<div class="places__item card">
+        <!--
+        <div class="places__item card">
           <img src="images/yosemite.png" alt="yosemite valley" class="card__image">                   
             <div class="card__content">
               <h2 class="card__title">Yosemite Valley</h2>
@@ -83,18 +83,23 @@
         </form>
       </div>
     </div>   
-    <script src="./scripts/index.js"></script>  
 
     <template id="card-template">
-      <li class="places__item card">
-        <div class="card__image" style=""></div>
-        <!--<img src="images/yosemite.png" alt="yosemite valley" class="place__image"> -->                  
-          <div class="card__content">
-            <h2 class="card__title"></h2>
-            <button class="card__like-button button" type="button" style="background-image: url('./images/heart.png');"></button> 
-          </div>         
-      </li>
+      <div class="places__item">
+        <img src="" alt="place image" class="card__image">                      
+        <div class="card__content">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button button" type="button">
+            <img src="images/heart.png" class ="card__like-heart" alt="heart">
+          </button> 
+        </div>         
+      </div>
     </template>
+
+   
+
+    <script src="./scripts/index.js"></script>  
+
 
   </body> 
 
