code javascript for popup image

--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
       </div>
     </div>  
 
+    <div class="modal modal_type_preview"> 
+      <div class="modal__container">   
+        <div class="modal__form modal__container_content_preview">
+          <button aria-label="Close Form" type="button" class="modal__close-button button">
+            <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal_close_preview">
+          </button>
+          <img class="modal__image" src="#" alt="">  
+        </div>     
+      </div>
+    </div>  
+
     <template id="card-template">
       <div class="places__item card">
         <img src="#" alt="place image" class="card__image">   
