code javascript for new card and like button activation

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <h3 class="modal__title">New Place</h3>
           <input type="text" name="title" class="modal__input modal__input_type_title" placeholder="Title">         
           <input type="url" name="image url" class="modal__input modal__input_type_image-url" placeholder="Image URL">                 
-          <button aria-label="Submit Form" type="submit" class="modal__submit button">Create</button>  
+          <button aria-label="Submit Form" type="submit" class="modal__submit modal__submit_type_create-card button">Create</button>  
         </form>
       </div>
     </div>  
@@ -120,6 +120,7 @@
           <h2 class="card__title"></h2>
           <button class="card__like-button button" type="button">
             <img src="images/heart.png" class ="card__like-heart" alt="heart">
+            <!--<img src="images/heart-active.png" class="card__like-heart_active" alt="black heart">-->
           </button> 
         </div>         
       </div>
