--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="card__content">
           <h2 class="card__title"></h2>
           <button class="card__like-button button" type="button">
-            <img src="images/heart.png" class ="card__like-heart" alt="heart">
+            <img src="images/heart.png" class ="card__like-heart card__like-image" alt="heart">           
             <!--<img src="images/heart-active.png" class="card__like-heart_active" alt="black heart">-->
           </button> 
         </div>         
