debug like button and code modal caption

--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
           <button aria-label="Close Form" type="button" class="modal__close-button button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal_close_preview">
           </button>
-          <img class="modal__image" src="#" alt="">  
-        </div>     
-      </div>
+          <img class="modal__image" src="#" alt="">   
+          <p class="modal__caption"></p>         
+        </div>   
+         
+      </div>      
     </div>  
 
     <template id="card-template">
@@ -118,9 +120,7 @@
         </button>                   
         <div class="card__content">
           <h2 class="card__title"></h2>
-          <button class="card__like-button button" type="button">
-            <img src="images/heart.png" class ="card__like-heart card__like-image" alt="heart">           
-            <!--<img src="images/heart-active.png" class="card__like-heart_active" alt="black heart">-->
+          <button class="card__like-button button" type="button">            
           </button> 
         </div>         
       </div>
