--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <section class="places">
       </section>
     </main>    
-    
+
     <footer class="footer"><p class="footer__copyright">&copy;2020. Around the US</p></footer>
 
     <div class="modal modal_type_profile"> 
       <div class="modal__container">   
         <form class="modal__form modal__form_type_profile" action="#" method="POST">
-          <button aria-label="Close Form" type="button" class="modal__close-button modal_close_profile button">
+          <button aria-label="Close Form" type="button" class="modal__close-button modal__close_profile button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">Edit profile</h3>
@@ -46,7 +46,7 @@
     <div class="modal modal_type_add-card"> 
       <div class="modal__container">   
         <form class="modal__form modal__form_type_add-card" action="#" method="POST">
-          <button aria-label="Close Form" type="button" class="modal__close-button modal_close_add-card button">
+          <button aria-label="Close Form" type="button" class="modal__close-button modal__close_add-card button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">New Place</h3>
@@ -59,11 +59,11 @@
 
     <div class="modal modal_type_preview"> 
       <div class="modal__container">   
-        <div class="modal__form modal__container_content_preview">
+        <div class="modal__form modal__container_type_preview">
           <button aria-label="Close Form" type="button" class="modal__close-button button">
-            <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal_close_preview">
+            <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal__close_preview">
           </button>
-          <img class="modal__image" src="#" alt="">   
+          <img class="modal__image" src="#" alt="#">   
           <p class="modal__caption"></p>         
         </div>   
          
